; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/steering/extr_dr_matcher.c_mlx5dr_matcher_destroy.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/steering/extr_dr_matcher.c_mlx5dr_matcher_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx5dr_matcher = type { %struct.mlx5dr_table*, i32 }
%struct.mlx5dr_table = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

@EBUSY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mlx5dr_matcher_destroy(%struct.mlx5dr_matcher* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.mlx5dr_matcher*, align 8
  %4 = alloca %struct.mlx5dr_table*, align 8
  store %struct.mlx5dr_matcher* %0, %struct.mlx5dr_matcher** %3, align 8
  %5 = load %struct.mlx5dr_matcher*, %struct.mlx5dr_matcher** %3, align 8
  %6 = getelementptr inbounds %struct.mlx5dr_matcher, %struct.mlx5dr_matcher* %5, i32 0, i32 0
  %7 = load %struct.mlx5dr_table*, %struct.mlx5dr_table** %6, align 8
  store %struct.mlx5dr_table* %7, %struct.mlx5dr_table** %4, align 8
  %8 = load %struct.mlx5dr_matcher*, %struct.mlx5dr_matcher** %3, align 8
  %9 = getelementptr inbounds %struct.mlx5dr_matcher, %struct.mlx5dr_matcher* %8, i32 0, i32 1
  %10 = call i32 @refcount_read(i32* %9)
  %11 = icmp sgt i32 %10, 1
  br i1 %11, label %12, label %15

12:                                               ; preds = %1
  %13 = load i32, i32* @EBUSY, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %2, align 4
  br label %37

15:                                               ; preds = %1
  %16 = load %struct.mlx5dr_table*, %struct.mlx5dr_table** %4, align 8
  %17 = getelementptr inbounds %struct.mlx5dr_table, %struct.mlx5dr_table* %16, i32 0, i32 0
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = call i32 @mutex_lock(i32* %19)
  %21 = load %struct.mlx5dr_matcher*, %struct.mlx5dr_matcher** %3, align 8
  %22 = call i32 @dr_matcher_remove_from_tbl(%struct.mlx5dr_matcher* %21)
  %23 = load %struct.mlx5dr_matcher*, %struct.mlx5dr_matcher** %3, align 8
  %24 = call i32 @dr_matcher_uninit(%struct.mlx5dr_matcher* %23)
  %25 = load %struct.mlx5dr_matcher*, %struct.mlx5dr_matcher** %3, align 8
  %26 = getelementptr inbounds %struct.mlx5dr_matcher, %struct.mlx5dr_matcher* %25, i32 0, i32 0
  %27 = load %struct.mlx5dr_table*, %struct.mlx5dr_table** %26, align 8
  %28 = getelementptr inbounds %struct.mlx5dr_table, %struct.mlx5dr_table* %27, i32 0, i32 1
  %29 = call i32 @refcount_dec(i32* %28)
  %30 = load %struct.mlx5dr_table*, %struct.mlx5dr_table** %4, align 8
  %31 = getelementptr inbounds %struct.mlx5dr_table, %struct.mlx5dr_table* %30, i32 0, i32 0
  %32 = load %struct.TYPE_2__*, %struct.TYPE_2__** %31, align 8
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 0
  %34 = call i32 @mutex_unlock(i32* %33)
  %35 = load %struct.mlx5dr_matcher*, %struct.mlx5dr_matcher** %3, align 8
  %36 = call i32 @kfree(%struct.mlx5dr_matcher* %35)
  store i32 0, i32* %2, align 4
  br label %37

37:                                               ; preds = %15, %12
  %38 = load i32, i32* %2, align 4
  ret i32 %38
}

declare dso_local i32 @refcount_read(i32*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @dr_matcher_remove_from_tbl(%struct.mlx5dr_matcher*) #1

declare dso_local i32 @dr_matcher_uninit(%struct.mlx5dr_matcher*) #1

declare dso_local i32 @refcount_dec(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1

declare dso_local i32 @kfree(%struct.mlx5dr_matcher*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
